// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> toMatchSnapshot: Placement -> bottom 1`] = `
<div
  className="sc-bxivhb irOPwR"
>
  <div
    className="luna-tooltip sc-ifAKCX iroWzm"
  >
    <span
      className="sc-bdVaJa gOGVcF"
    >
      <span>
        tooltip content
      </span>
    </span>
  </div>
  <div>
    <p>
       My tooltip test
    </p>
  </div>
</div>
`;

exports[`<Tooltip /> toMatchSnapshot: Placement -> left 1`] = `
<div
  className="sc-EHOje jfFfHP"
>
  <div
    className="luna-tooltip sc-bZQynM dXISCH"
  >
    <span
      className="sc-bdVaJa gOGVcF"
    >
      <span>
        tooltip content
      </span>
    </span>
  </div>
  <div>
    <p>
       My tooltip test
    </p>
  </div>
</div>
`;

exports[`<Tooltip /> toMatchSnapshot: Placement -> right 1`] = `
<div
  className="sc-gzVnrw ektNdk"
>
  <div
    className="luna-tooltip sc-htoDjs gDvThS"
  >
    <span
      className="sc-bdVaJa gOGVcF"
    >
      <span>
        tooltip content
      </span>
    </span>
  </div>
  <div>
    <p>
       My tooltip test
    </p>
  </div>
</div>
`;

exports[`<Tooltip /> toMatchSnapshot: Placement -> top 1`] = `
<div
  className="sc-bwzfXH ercWqi"
>
  <div
    className="luna-tooltip sc-htpNat eHocSZ"
  >
    <span
      className="sc-bdVaJa gOGVcF"
    >
      <span>
        tooltip content
      </span>
    </span>
  </div>
  <div>
    <p>
       My tooltip test
    </p>
  </div>
</div>
`;
